docker error resolved